--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "update-types": "supabase gen types typescript --linked > lib/database.types.ts"
   },
   "dependencies": {
@@ -28,8 +29,6 @@
     "bufferutil": "^4.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
     "geist": "^1.2.1",
     "lucide-react": "^0.274.0",
     "next": "13.4.19",
@@ -43,12 +42,17 @@
     "tailwindcss-animate": "^1.0.7",
     "tus-js-client": "^4.2.3",
     "typescript": "5.2.2",
-    "utf-8-validate": "^6.0.4"
+    "utf-8-validate": "^6.0.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.1",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.0",
     "postcss": "8.4.33",
     "supabase": "^1.204.3",
     "tailwind-merge": "^2.5.2",
