--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
+    "tslint": "npm run lint && npx tsc --noEmit ",
     "update-types": "supabase gen types typescript --linked > lib/database.types.ts"
   },
   "dependencies": {
