--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "^2.33.1",
+    "@tanstack/react-query": "^5.59.13",
     "ai": "^3.4.9",
     "autoprefixer": "10.4.15",
     "axios": "^1.7.7",
     "bufferutil": "^4.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^4.1.0",
     "geist": "^1.2.1",
     "lucide-react": "^0.274.0",
     "next": "13.4.19",
