feat: cloud resume to json
- add functions for resume to json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "typescript",
     "typescriptreact"
   ],
+  "cSpell.words": ["langchain", "OPENAI", "SUPABASE", "tesseract"],
   "cSpell.words": ["supabase"]
 }
