--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "^2.33.1",
     "@tanstack/react-query": "^5.59.13",
+    "@trpc/client": "^11.0.0-rc.446",
+    "@trpc/react-query": "^11.0.0-rc.446",
+    "@trpc/server": "^11.0.0-rc.446",
     "ai": "^3.4.9",
     "autoprefixer": "10.4.15",
     "axios": "^1.7.7",
@@ -47,6 +50,7 @@
     "react-dom": "^18.3.1",
     "resend": "^4.0.0",
     "retell-client-js-sdk": "^2.0.4",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
@@ -59,16 +63,21 @@
     "@types/node": "20.10.6",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.1",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.2.8",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.3",
     "postcss": "8.4.33",
     "supabase": "^1.204.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.3.3"
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">=20.0.0"
