--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "useUnknownInCatchVariables": false,
+    "noErrorTruncation": true,
     "incremental": true,
     "plugins": [
       {
@@ -27,6 +29,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "edge_function"]
-  // "strictNullChecks": true
+  "exclude": ["node_modules", ".next", "edge_function"]
 }
