--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "unused-imports"
   ],
   "rules": {
+    "react-hooks/exhaustive-deps": "off",
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
     "security/detect-object-injection": "off",
