--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "postcss": "8.4.33",
     "supabase": "^1.204.3",
     "tailwind-merge": "^2.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.4"
