--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "geist": "^1.2.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.440.0",
-    "next": "13.4.19",
+    "next": "14.2.14",
     "next-themes": "^0.3.0",
     "postcss": "8.4.29",
     "react": "^18.3.1",
@@ -74,9 +75,9 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.3",
     "postcss": "8.4.33",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "supabase": "^1.204.3",
     "tailwind-merge": "^2.5.2",
-    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.4"
