--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "tslint": "npm run lint && npx tsc --noEmit ",
-    "update-types": "supabase gen types typescript --linked > lib/database.types.ts"
+    "supabase-type": "npx supabase gen types typescript --linked > src/supabase-types/database.types.ts && npm run fix_types && npm run generate-zod-schemas",
+    "update-types": "supabase gen types typescript --linked > supabase-types/database.types.ts",
+    "generate-zod-schemas": "supabase-to-zod --input src/supabase-types/database.types.ts --output src/supabase-types/zod-schema.types.ts",
+    "fix_types": "npx tsc src/script/removeJsonType.ts --skipLibCheck && node src/script/removeJsonType.js"
   },
   "dependencies": {
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -24,6 +27,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -42,6 +46,8 @@
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.11",
+    "framer-motion": "^11.11.9",
     "geist": "^1.2.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.440.0",
@@ -49,7 +55,9 @@
     "next-themes": "^0.3.0",
     "postcss": "8.4.29",
     "react": "^18.3.1",
+    "react-day-picker": "^9.1.4",
     "react-dom": "^18.3.1",
+    "react-phone-input-2": "^2.15.1",
     "resend": "^4.0.0",
     "retell-client-js-sdk": "^2.0.4",
     "superjson": "^2.2.1",
@@ -77,6 +85,7 @@
     "postcss": "8.4.33",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "supabase": "^1.204.3",
+    "supabase-to-zod": "^1.0.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
