feat: add error enum

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,12 @@
     "typescript",
     "typescriptreact"
   ],
-  "cSpell.words": ["langchain", "OPENAI", "SUPABASE", "tesseract"],
-  "cSpell.words": ["supabase"]
+  "cSpell.words": [
+    "supabase",
+    "TRPC",
+    "langchain",
+    "OPENAI",
+    "SUPABASE",
+    "tesseract"
+  ]
 }
