--- a/package.json
+++ b/package.json
@@ -30,9 +30,8 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "^2.33.1",
+    "@supabase/ssr": "0.5.1",
+    "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-query": "^5.59.13",
     "@tanstack/react-query-devtools": "^5.59.13",
     "@trpc/client": "^11.0.0-rc.446",
