Renamed useNurseData to useUserData Hook and moved to app/(authentidated)_common hooks. Updated ts config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,12 +25,13 @@
     "baseUrl": ".",
     "paths": {
       "@/common/*": ["./app/_common/*"],
-      "@/trpc/*": ["./src/trpc/*"],
+      "@/trpc/*": ["./app/trpc/*"],
       "@/components/*": ["./components/*"],
       "@/utils/*": ["./utils/*"],
       "@/supabase-types/*": ["src/supabase-types/*"],
       "@/server/*": ["./server/*"],
-      "@/hooks/*": ["./hooks/*"]
+      "@/hooks/*": ["./hooks/*"],
+      "@/authenicated/*": ["./app/(authenticated)/_common/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
