--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fix_types": "npx tsc src/script/removeJsonType.ts --skipLibCheck && node src/script/removeJsonType.js"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.67",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -37,7 +38,7 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
-    "ai": "^3.4.9",
+    "ai": "^3.4.10",
     "autoprefixer": "10.4.15",
     "axios": "^1.7.7",
     "bufferutil": "^4.0.8",
