--- a/edge_function/process_resume_v1/package.json
+++ b/edge_function/process_resume_v1/package.json
@@ -15,7 +15,7 @@
     "gcp-build": "tsc",
     "start": "tsc && functions-framework --target hello --port 8081",
     "dev": "nodemon --ext ts --exec 'yarn start'",
-    "deploy_dev": "gcloud functions deploy nursera_ai_process_resume_v1 --gen2 --runtime=nodejs18 --region=northamerica-northeast2 --source=. --entry-point=hello --trigger-http --allow-unauthenticated"
+    "deploy": "gcloud functions deploy nursera_ai_process_resume_v1 --gen2 --runtime=nodejs18 --region=northamerica-northeast2 --source=. --entry-point=hello --trigger-http --allow-unauthenticated"
   },
   "dependencies": {
     "@google-cloud/functions-framework": "^3.4.2",
