--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "supabase-type": "npx supabase gen types typescript --linked > src/supabase-types/database.types.ts && npm run fix_types && npm run generate-zod-schemas",
     "update-types": "supabase gen types typescript --linked > supabase-types/database.types.ts",
     "generate-zod-schemas": "supabase-to-zod --input src/supabase-types/database.types.ts --output src/supabase-types/zod-schema.types.ts",
-    "fix_types": "npx tsc src/script/removeJsonType.ts --skipLibCheck && node src/script/removeJsonType.js"
+    "fix_types": "npx tsc src/script/removeJsonType.ts --skipLibCheck && node src/script/removeJsonType.js",
+    "seed:local": "npx supabase db dump -f supabase/seed.sql --local --data-only",
+    "types:local": "npx supabase gen types --lang=typescript --local  --schema public> src/supabase-types/database.types.ts && npm run fix_types && npm run generate-zod-schemas"
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.67",
