Openai real time (#13)
* fix: open-ai-real-time

* openai realtime interview integrated

* file name change

* fix: lint error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
       "@/supabase-types/*": ["src/supabase-types/*"],
       "@/server/*": ["./server/*"],
       "@/hooks/*": ["./hooks/*"],
+      "@/audio/*": [
+        "./lib/audio/*"
+      ],
       "@/authenicated/*": ["./app/(authenticated)/_common/*"]
     }
   },
