--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
       "@/audio/*": ["./lib/audio/*"],
       "@/authenticated/*": ["./app/(authenticated)/_common/*"],
       "@/applicant/*": ["./app/(authenticated)/@applicant/_common/*"],
-      "@/hospital/*": ["./app/(authenticated)/@hospital/_common/*"]
+      "@/hospital/*": ["./app/(authenticated)/@hospital/_common/*"],
+      "@/campaigns/*": ["./app/(authenticated)/@hospital/campaigns/_common/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
