fix:trigger_resume_to_json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,11 +9,12 @@
     "typescriptreact"
   ],
   "cSpell.words": [
-    "supabase",
-    "TRPC",
     "langchain",
     "OPENAI",
+    "supabase",
     "SUPABASE",
-    "tesseract"
+    "telemedicine",
+    "tesseract",
+    "TRPC"
   ]
 }
