--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "nuqs": "^1.18.0",
     "tus-js-client": "^4.2.3",
     "typescript": "5.2.2",
     "utf-8-validate": "^6.0.4",
