--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "@types/lodash": "^4.17.12",
     "ai": "^3.4.10",
     "autoprefixer": "10.4.15",
     "axios": "^1.7.7",
@@ -59,9 +60,12 @@
     "framer-motion": "^11.11.9",
     "geist": "^1.2.1",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.440.0",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
+    "npm": "^10.9.0",
+    "nuqs": "^1.18.0",
     "postcss": "8.4.29",
     "react": "^18.3.1",
     "react-day-picker": "^9.1.4",
@@ -76,7 +80,6 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "nuqs": "^1.18.0",
     "tus-js-client": "^4.2.3",
     "typescript": "5.2.2",
     "utf-8-validate": "^6.0.4",
