--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,9 @@
       "@/hospital/*": ["./app/(authenticated)/(hospital)/_common/*"],
       "@/campaigns/*": ["./app/(authenticated)/(hospital)/campaigns/_common/*"],
       "@/templates/*": ["./app/(authenticated)/(hospital)/templates/_common/*"],
+      "@/version/*": [
+        "./app/(authenticated)/(hospital)/templates/[version]/_common/*"
+      ],
       "@/campaign/*": [
         "./app/(authenticated)/(hospital)/campaigns/[campaign]/_common/*"
       ]
