--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
@@ -62,6 +63,7 @@
     "lucide-react": "^0.440.0",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
+    "nuqs": "^1.18.0",
     "postcss": "8.4.29",
     "react": "^18.3.1",
     "react-day-picker": "^9.1.4",
@@ -76,7 +78,6 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "nuqs": "^1.18.0",
     "tus-js-client": "^4.2.3",
     "typescript": "5.2.2",
     "utf-8-validate": "^6.0.4",
