eslint outside of app directory

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "tslint": "npm run lint && npx tsc --noEmit ",
+    "lint": "next lint --dir .",
+    "lint:fix": "next lint --dir .--fix",
+    "tslint": "npm run lint  && npx tsc --noEmit ",
     "supabase-type": "npx supabase gen types typescript --linked > src/supabase-types/database.types.ts && npm run fix_types && npm run generate-zod-schemas",
     "generate-zod-schemas": "supabase-to-zod --input src/supabase-types/database.types.ts --output src/supabase-types/zod-schema.types.ts",
     "fix_types": "npx tsc src/script/removeJsonType.ts --skipLibCheck && node src/script/removeJsonType.js",
