--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "tus-js-client": "^4.2.3",
     "typescript": "5.2.2",
     "utf-8-validate": "^6.0.4",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
