--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
   ],
   "rules": {
     "react-hooks/exhaustive-deps": "off",
+    "no-console": ["error", { "allow": ["error"] }],
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
     "security/detect-object-injection": "off",
