--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,12 +39,16 @@
       "@/authenticated/*": ["./app/(authenticated)/_common/*"],
       "@/agency/*": ["./app/(authenticated)/(agency)/_common/*"],
       "@/campaigns/*": ["./app/(authenticated)/(agency)/campaigns/_common/*"],
-      "@/templates/*": ["./app/(authenticated)/(agency)/templates/_common/*"],
-      "@/version/*": [
-        "./app/(authenticated)/(agency)/templates/[version]/_common/*"
-      ],
       "@/campaign/*": [
         "./app/(authenticated)/(agency)/campaigns/[campaign]/_common/*"
+      ],
+      "@/templates/*": ["./app/(authenticated)/(agency)/templates/_common/*"],
+      "@/interviews/*": ["app/(authenticated)/(agency)/interviews/_common/*"],
+      "@/interview/*": [
+        "app/(authenticated)/(agency)/interviews/[interview]/_common/*"
+      ],
+      "@/version/*": [
+        "./app/(authenticated)/(agency)/templates/[version]/_common/*"
       ]
     }
   },
