--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "dayjs": "^1.11.11",
     "framer-motion": "^11.11.9",
     "geist": "^1.2.1",
+    "html-react-parser": "^5.1.18",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.440.0",
     "next": "14.2.14",
