--- a/package.json
+++ b/package.json
@@ -39,12 +39,17 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@supabase/ssr": "0.5.1",
     "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-query": "^5.59.13",
     "@tanstack/react-query-devtools": "^5.59.13",
     "@tanstack/react-table": "^8.20.5",
+    "@tiptap/core": "^2.9.1",
+    "@tiptap/extension-placeholder": "^2.9.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
@@ -59,6 +64,7 @@
     "dayjs": "^1.11.11",
     "framer-motion": "^11.11.9",
     "geist": "^1.2.1",
+    "html-react-parser": "^5.1.18",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.440.0",
     "next": "14.2.14",
