--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "npm": "^10.9.0",
     "nuqs": "^1.18.0",
     "postcss": "8.4.29",
+    "posthog-js": "^1.184.2",
     "react": "^18.3.1",
     "react-day-picker": "^9.1.4",
     "react-dom": "^18.3.1",
