--- a/edge_function/process_resume_v1/package.json
+++ b/edge_function/process_resume_v1/package.json
@@ -14,7 +14,7 @@
     "tsconfig": "tsc --init",
     "gcp-build": "tsc",
     "start": "tsc && functions-framework --target hello --port 8081",
-    "dev": "nodemon --ext ts --exec 'yarn start'",
+    "dev": "nodemon src/index.ts",
     "deploy": "gcloud functions deploy nursera_ai_process_resume_v1 --gen2 --runtime=nodejs18 --region=northamerica-northeast2 --source=. --entry-point=hello --trigger-http --allow-unauthenticated"
   },
   "dependencies": {
@@ -25,13 +25,14 @@
     "axios": "^1.6.0",
     "dlx": "^0.2.1",
     "dotenv": "^16.3.1",
-    "langchain": "^0.3.2",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.3",
+    "langchain": "^0.3.2",
     "openai": "^4.11.1",
     "tesseract.js": "^5.1.1",
+    "ts-node": "^10.9.2",
     "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
