--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.67",
+    "@calcom/embed-react": "^1.5.1",
     "@google-cloud/storage": "^7.14.0",
     "@google-cloud/vertexai": "^1.9.0",
     "@hookform/resolvers": "^3.9.0",
