--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@calcom/embed-react": "^1.5.1",
     "@google-cloud/storage": "^7.14.0",
     "@google-cloud/vertexai": "^1.9.0",
-    "@hookform/resolvers": "^3.9.0",
+    "@hookform/resolvers": "^3.9.1",
     "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -82,11 +82,12 @@
     "react-day-picker": "^9.1.4",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.0",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.54.0",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.9",
-    "resend": "^4.0.0",
+    "resend": "^4.0.1",
     "retell-client-js-sdk": "^2.0.4",
+    "sonner": "^1.7.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
@@ -95,7 +96,7 @@
     "typescript": "5.2.2",
     "utf-8-validate": "^6.0.4",
     "vaul": "^1.1.0",
-    "zod": "^3.23.8",
+    "zod": "^3.24.1",
     "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
