--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "json-to-any": "npx tsc src/script/removeJsonType.ts --skipLibCheck && node src/script/removeJsonType.js",
     "zod": "supabase-to-zod --input server/db/schema/default.ts --output server/db/zod.ts",
     "types:local": "npx supabase gen types --lang=typescript --local --schema public> server/db/schema/default.ts && npm run json-to-any && npm run zod",
-    "types:remote": "npx supabase gen types --lang=typescript --db-url postgresql://postgres:m4f0eRER0SLoYWRF@db.wkcrwjfqljwprytoiigk.supabase.co:5432/postgres --schema public> server/db/schema/default.ts && npm run json-to-any && npm run zod",
+    "types:remote": "npx supabase gen types --lang=typescript --project-id wkcrwjfqljwprytoiigk --schema public> server/db/schema/default.ts && npm run json-to-any && npm run zod",
     "seed:local": "supabase db dump -f supabase/seed.sql --local --data-only --exclude auth.audit_log_entries,auth.flow_state,auth.sessions,auth.mfa_amr_claims,auth.one_time_tokens,auth.refresh_tokens",
     "seed:remote": "supabase db dump -f supabase/seed.sql --data-only --exclude auth.audit_log_entries,auth.flow_state,auth.sessions,auth.mfa_amr_claims,auth.one_time_tokens,auth.refresh_tokens"
   },
@@ -64,7 +64,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.11.9",
     "geist": "^1.2.1",
@@ -79,7 +79,7 @@
     "postcss": "8.4.29",
     "posthog-js": "^1.195.0",
     "react": "^18.3.1",
-    "react-day-picker": "^9.1.4",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.0",
     "react-hook-form": "^7.54.0",
